--- a/test/ForDevelopement/PolynomialInterpolationWeights.ipynb
+++ b/test/ForDevelopement/PolynomialInterpolationWeights.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -65,13 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}- \\frac{δ^{3}}{2} + δ^{2} - \\frac{δ}{2}\\end{equation*}$\n"
+       "$- \\frac{δ^{3}}{2} + δ^{2} - \\frac{δ}{2}$"
       ],
       "text/plain": [
        "   3         \n",
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}\\frac{3 δ^{3}}{2} - \\frac{5 δ^{2}}{2} + 1\\end{equation*}$\n"
+       "$\\frac{3 δ^{3}}{2} - \\frac{5 δ^{2}}{2} + 1$"
       ],
       "text/plain": [
        "   3      2    \n",
@@ -101,7 +101,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}- \\frac{3 δ^{3}}{2} + 2 δ^{2} + \\frac{δ}{2}\\end{equation*}$\n"
+       "$- \\frac{3 δ^{3}}{2} + 2 δ^{2} + \\frac{δ}{2}$"
       ],
       "text/plain": [
        "     3           \n",
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}\\frac{δ^{3}}{2} - \\frac{δ^{2}}{2}\\end{equation*}$\n"
+       "$\\frac{δ^{3}}{2} - \\frac{δ^{2}}{2}$"
       ],
       "text/plain": [
        " 3    2\n",
@@ -148,6 +148,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\left[ \\begin{array}{r}c_{0} - y_{i}\\\\c_{0} + c_{1} Δ + c_{2} Δ^{2} + c_{3} Δ^{3} - y_{i+1}\\\\c_{1} - \\frac{y_{i+1}}{2 Δ} + \\frac{y_{i-1}}{2 Δ}\\\\c_{1} + 2 c_{2} Δ + 3 c_{3} Δ^{2} - \\frac{y_{i+2}}{2 Δ} + \\frac{y_{i}}{2 Δ}\\end{array} \\right]$\n"
+      ],
+      "text/plain": [
+       "4-element Vector{Sym}:\n",
+       "                                                 c_{0} - y_{i}\n",
+       "             c_{0} + c_{1}*Δ + c_{2}*Δ^2 + c_{3}*Δ^3 - y_{i+1}\n",
+       "                         c_{1} - y_{i+1}/(2*Δ) + y_{i-1}/(2*Δ)\n",
+       " c_{1} + 2*c_{2}*Δ + 3*c_{3}*Δ^2 - y_{i+2}/(2*Δ) + y_{i}/(2*Δ)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "eqs"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -163,13 +189,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}0\\end{equation*}$\n"
+       "$0$"
       ],
       "text/plain": [
        "0"
@@ -181,13 +207,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}\\frac{δ^{2}}{2} - \\frac{3 δ}{2} + 1\\end{equation*}$\n"
+       "$\\frac{δ^{3}}{2} - \\frac{δ^{2}}{2} - δ + 1$"
       ],
       "text/plain": [
-       " 2          \n",
-       "δ    3⋅δ    \n",
-       "── - ─── + 1\n",
-       "2     2     "
+       " 3    2        \n",
+       "δ    δ         \n",
+       "── - ── - δ + 1\n",
+       "2    2         "
       ]
      },
      "metadata": {},
@@ -196,11 +222,11 @@
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}- δ^{2} + 2 δ\\end{equation*}$\n"
+       "$- δ^{3} + δ^{2} + δ$"
       ],
       "text/plain": [
-       "   2      \n",
-       "- δ  + 2⋅δ"
+       "   3    2    \n",
+       "- δ  + δ  + δ"
       ]
      },
      "metadata": {},
@@ -209,13 +235,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}\\frac{δ^{2}}{2} - \\frac{δ}{2}\\end{equation*}$\n"
+       "$\\frac{δ^{3}}{2} - \\frac{δ^{2}}{2}$"
       ],
       "text/plain": [
-       " 2    \n",
-       "δ    δ\n",
-       "── - ─\n",
-       "2    2"
+       " 3    2\n",
+       "δ    δ \n",
+       "── - ──\n",
+       "2    2 "
       ]
      },
      "metadata": {},
@@ -226,14 +252,15 @@
     "##Beginning Not enforcing unknown conditions\n",
     "quad_pol = sum(symbols(\"c_{$i}\")*x^i for i in 0:2)\n",
     "eqs = [\n",
-    "    quad_pol.subs(x,xs[2] - xs[2]) - ys[2], # f(0)\n",
-    "    quad_pol.subs(x,xs[3] - xs[2]) - ys[3], # f(Δ)\n",
-    "    quad_pol.diff(x).subs(x,xs[3] - xs[2]) - (ys[4] - ys[2])/(xs[4] - xs[2]) # f'(Δ)\n",
+    "    cubic_pol.subs(x,xs[2] - xs[2]) - ys[2], # f(0)\n",
+    "    cubic_pol.subs(x,xs[3] - xs[2]) - ys[3], # f(Δ)\n",
+    "    cubic_pol.diff(x).subs(x,xs[2] - xs[2]) - (ys[3] - ys[2])/(xs[3] - xs[2]), # f'(Δ)\n",
+    "    cubic_pol.diff(x).subs(x,xs[3] - xs[2]) - (ys[4] - ys[2])/(xs[4] - xs[2]) # f'(Δ)\n",
     "]\n",
     "eqs = expand.(eqs)\n",
     "\n",
     "sol = solve(eqs,cs)\n",
-    "appr = quad_pol.subs(sol) |> expand\n",
+    "appr = cubic_pol.subs(sol) |> expand\n",
     "\n",
     "for y in ys\n",
     "    appr.coeff(y).subs(x/Δ,δ) |> display\n",
@@ -316,6 +343,8 @@
     "    quad_pol.subs(x,xs[2] - xs[2]) - ys[2], # f(0)\n",
     "    quad_pol.subs(x,xs[3] - xs[2]) - ys[3], # f(Δ)\n",
     "    quad_pol.diff(x).subs(x,xs[2] - xs[2]) - (ys[3] - ys[1])/((xs[3] - xs[1])),# f'(0)\n",
+    "    quad_pol.diff(x).subs(x,xs[3] - xs[2]) - (ys[3] - ys[2])/(xs[3] - xs[2]) # f'(Δ)\n",
+    "\n",
     "]\n",
     "eqs = expand.(eqs)\n",
     "\n",
@@ -1599,7 +1628,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.0-rc2",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
    "name": "julia-1.7"
   },
@@ -1607,7 +1636,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.0-rc2"
+   "version": "1.7.2"
   },
   "toc": {
    "base_numbering": 1,
